--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Slenderbox maintained by <a href="https://github.com/mpetroff">Matthew Petroff</a></p>
+        <p class="copyright">Slenderbox is maintained by <a href="https://github.com/mpetroff">Matthew Petroff</a>.</p>
       </footer>
     </div>
 
