--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 <li>Chrome 5+</li>
 <li>Safari 4.1+</li>
 <li>Opera 12.5+</li>
+<li>Internet Explorer 10+</li>
 </ul><h4>Partial support:</h4>
 
 <ul>
